--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
-html{
-  /*cursor: none;*/
-}
 
+.App{
+  height: 200vh;
+  overflow-x: hidden;
+}
 .hooks-main {
-  position: absolute;
+  /*position: absolute;*/
   z-index: 3;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   /*filter: url('#goo');*/
   overflow: hidden;
+  background-color: cornflowerblue;
+
 }
 
 .hooks-main > div {
@@ -58,31 +61,26 @@ html{
 /*}*/
 
 .card__container{
-  display: flex;
+  width: 100%;
   height: 100vh;
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;*/
+  /*justify-content: center;*/
 }
-
 .card{
-  margin: 20px;
-  width: 300px;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  width: 20%;
   height: 300px;
+  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.5s;
+  will-change: transform;
+  border-radius: 5px;
+  background-image: url(https://drscdn.500px.org/photo/435236/q%3D80_m%3D1500/v2?webp=true&sig=67031bdff6f582f3e027311e2074be452203ab637c0bd21d89128844becf8e40);
 }
 .card:hover {
-  box-shadow: 10px 10px 1px blue;
+  box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
 }
-.card img {
-  height: 100%;
-  width: 100%;
-}
-.card p {
-  text-align: center;
-  margin: 0;
-  font-weight: 800;
-}
-
-
 /*.hooks-main > div:nth-child(2)::after {*/
 /*  top: 70px;*/
 /*  left: 70px;*/
