--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   overflow-x: hidden;
 }
 .hooks-main {
+  cursor: none;
   /*position: absolute;*/
   z-index: 3;
   width: 100%;
@@ -61,13 +62,13 @@
 /*}*/
 
 .card__container{
+  display: flex;
   width: 100%;
   height: 100vh;
-  /*align-items: center;*/
-  /*justify-content: center;*/
+  align-items: center;
+  justify-content: center;
 }
 .card{
-  display: inline-block;
   margin: 0;
   padding: 0;
   width: 20%;
@@ -75,11 +76,17 @@
   box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
   transition: box-shadow 0.5s;
   will-change: transform;
-  border-radius: 5px;
-  background-image: url(https://drscdn.500px.org/photo/435236/q%3D80_m%3D1500/v2?webp=true&sig=67031bdff6f582f3e027311e2074be452203ab637c0bd21d89128844becf8e40);
 }
 .card:hover {
   box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
+}
+.card img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.card h1{
+  text-align: center;
 }
 /*.hooks-main > div:nth-child(2)::after {*/
 /*  top: 70px;*/
