--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,12 @@
+@import "styles/reset";
 
-.App{
-  height: 200vh;
-  overflow-x: hidden;
+.chromeframe {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
+
 .hooks-main {
   cursor: none;
   /*position: absolute;*/
