--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -15,7 +15,7 @@
       text-shadow: 1px 5px 10px orangered;
     }
     a{
-      color: black;
+      color: white;
       text-decoration: none;
     }
     &--img{
