--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -2,17 +2,21 @@
 .home{
   padding-top: 250px;
   height: 200vh;
+  background-color: black;
+  color:white;
 }
 .hero{
-  text-align: center;
+    display: flex;
+    justify-content: center;
 
   &__header{
     font-family: $secondary-font;
+    text-align: center;
   }
 
   &__img{
     position: relative;
-    height: 300px;
+    width: 30%;
     margin: 3em 1em;
     cursor: pointer;
     z-index: 2;
