--- a/src/styles/varibles.scss
+++ b/src/styles/varibles.scss
@@ -1,6 +1,9 @@
 $black: black;
 $white: white;
 
+$background-color: white;
+$text-color: black;
+
 @import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=MuseoModerno:wght@500&display=swap');
 
