--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -1,15 +1,16 @@
 @import "../styles/varibles";
 .nav {
   font-family: $secondary-font;
-  position: absolute;
+  position: fixed;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   align-items: center;
-  justify-content: center;
   will-change: transform;
   &__link{
     margin: 1em;
+
+  
     &:hover{
       transition-duration: 0.3s;
       text-shadow: 1px 5px 10px orangered;
